Fix HTML encoding

--- a/rscm/trunk/test/rscm/test.html
+++ b/rscm/trunk/test/rscm/test.html
@@ -17,8 +17,8 @@
 </pre></div>
 <div>
 <pre class='diff' id='context'> /**
-</pre><pre class='diff' id='context'>  * @author Aslak Helles&oslash;y
-</pre><pre class='diff' id='context'>  * @author Jon Tirs&eacute;n
+</pre><pre class='diff' id='context'>  * @author Aslak Helles&amp;oslash;y
+</pre><pre class='diff' id='context'>  * @author Jon Tirs&amp;eacute;n
 </pre><pre class='diff' id='removed'>- * @version $Revision: 1.<span id='removedchars'>1</span> $
 </pre><pre class='diff' id='added'>+ * @version $Revision: 1.<span id='addedchars'>2</span> $
 </pre><pre class='diff' id='context'>  */
