--- a/damagecontrol/test/damagecontrol/expected_dependency_graph.html
+++ b/damagecontrol/test/damagecontrol/expected_dependency_graph.html
@@ -1,6 +1,4 @@
-<img src="/project_dependencies/image" usemap="#project_dependencies">
+<img src="/dependency/image?dummy=" usemap="#project_dependencies">
 <map name="project_dependencies">
-<area shape="rect" href="ajax/RSCM" title="RSCM" alt="" coords="8,104,93,152">
-<area shape="rect" href="ajax/Ruby" title="Ruby" alt="" coords="53,200,128,248">
-<area shape="rect" href="ajax/DamageControl" title="DamageControl" alt="" coords="14,8,166,56">
+<area shape="rect" href="#" onclick="javascript:new Ajax.Updater(&#39;dependency_graph&#39;, &#39;/projects/RSCM/remove_dependency/Ruby&#39;, {asynchronous:true});" title="Ruby" alt="" coords="53,200,128,248">
 </map>
