moved more tests

--- a/branches/damagecontrol_active_record/test/unit/damagecontrol/diff/test.html
+++ b/branches/damagecontrol_active_record/test/unit/damagecontrol/diff/test.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link type='text/css' rel='stylesheet' href='../../public/stylesheets/diff.css'>
+<link type='text/css' rel='stylesheet' href='../../../../public/stylesheets/diff.css'>
 </head>
 <body>
 <div>
