--- a/branches/damagecontrol_active_record/test/unit/damagecontrol/diff/test.html
+++ b/branches/damagecontrol_active_record/test/unit/damagecontrol/diff/test.html
@@ -4,37 +4,37 @@
 </head>
 <body>
 <div>
-<pre class='diff' id='context'> package org.picocontainer.sample.tulip;
-</pre><pre class='diff' id='context'>
-</pre><pre class='diff' id='removed'>-import org.picocontainer.<span id='removedchars'>lifecycle.</span>Startable;
-</pre><pre class='diff' id='added'>+import org.picocontainer.Startable;
-</pre><pre class='diff' id='context'>
-</pre><pre class='diff' id='removed'>-import org.boo.Fillable;
-</pre><pre class='diff' id='added'>+import org.boo.<span id='addedchars'>foooooo.</span>Fillable;
-</pre><pre class='diff' id='context'>
-</pre><pre class='diff' id='context'> import javax.swing.*;
-</pre><pre class='diff' id='context'> import javax.swing.table.DefaultTableModel;
+<pre class='diff-context'> package org.picocontainer.sample.tulip;
+</pre><pre class='diff-context'>
+</pre><pre class='diff-removed'>-import org.picocontainer.<span class='diff-removedchars'>lifecycle.</span>Startable;
+</pre><pre class='diff-added'>+import org.picocontainer.Startable;
+</pre><pre class='diff-context'>
+</pre><pre class='diff-removed'>-import org.boo.Fillable;
+</pre><pre class='diff-added'>+import org.boo.<span class='diff-addedchars'>foooooo.</span>Fillable;
+</pre><pre class='diff-context'>
+</pre><pre class='diff-context'> import javax.swing.*;
+</pre><pre class='diff-context'> import javax.swing.table.DefaultTableModel;
 </pre></div>
 <div>
-<pre class='diff' id='context'> /**
-</pre><pre class='diff' id='context'>  * @author Aslak Helles&amp;oslash;y
-</pre><pre class='diff' id='context'>  * @author Jon Tirs&amp;eacute;n
-</pre><pre class='diff' id='removed'>- * @version $Revision: 1.<span id='removedchars'>1</span> $
-</pre><pre class='diff' id='added'>+ * @version $Revision: 1.<span id='addedchars'>2</span> $
-</pre><pre class='diff' id='context'>  */
-</pre><pre class='diff' id='context'> public class FlowerMarketGui extends FlowerMarketStub implements Startable {
-</pre><pre class='diff' id='context'>     private DefaultTableModel bidsTableModel;
+<pre class='diff-context'> /**
+</pre><pre class='diff-context'>  * @author Aslak Helles&amp;oslash;y
+</pre><pre class='diff-context'>  * @author Jon Tirs&amp;eacute;n
+</pre><pre class='diff-removed'>- * @version $Revision: 1.<span class='diff-removedchars'>1</span> $
+</pre><pre class='diff-added'>+ * @version $Revision: 1.<span class='diff-addedchars'>2</span> $
+</pre><pre class='diff-context'>  */
+</pre><pre class='diff-context'> public class FlowerMarketGui extends FlowerMarketStub implements Startable {
+</pre><pre class='diff-context'>     private DefaultTableModel bidsTableModel;
 </pre></div>
 <div>
-<pre class='diff' id='context'>         frame.pack();
-</pre><pre class='diff' id='context'>         frame.setBounds(700, 100, 300, 600);
-</pre><pre class='diff' id='context'>         frame.show();
-</pre><pre class='diff' id='added'>+    }
-</pre><pre class='diff' id='added'>+
-</pre><pre class='diff' id='added'>+    public void stop() {
-</pre><pre class='diff' id='context'>     }
-</pre><pre class='diff' id='context'>
-</pre><pre class='diff' id='context'>     public void sellBid(String flower) {
+<pre class='diff-context'>         frame.pack();
+</pre><pre class='diff-context'>         frame.setBounds(700, 100, 300, 600);
+</pre><pre class='diff-context'>         frame.show();
+</pre><pre class='diff-added'>+    }
+</pre><pre class='diff-added'>+
+</pre><pre class='diff-added'>+    public void stop() {
+</pre><pre class='diff-context'>     }
+</pre><pre class='diff-context'>
+</pre><pre class='diff-context'>     public void sellBid(String flower) {
 </pre></div>
 </body>
 </html>
